ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration3/input.ts.stderr
error: Unexpected token `Foo`. Expected * for generator, private key, identifier or async
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration3/input.ts:2:17
  |
2 |   static public Foo;
  |                 ^^^

